src/app/components/lightbox/lightbox.component.scss
@import '~src/assets/scss/variables';

.lightbox {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;

  // &:hover {
  //   .prev,
  //   .next {
  //     opacity: .3;
  //     transform: translate3d(0, -50%, 0);
  //   }
  // }

  // @include respond-to('small') {
  //   padding: 1rem;
  // }
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: $color-white;
}

.content {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1rem 0;
}

.list-wrapper {
  position: relative;
  height: 100%;
}

.list {
  display: flex;
  height: 100%;

  &.is-animated {
    transition: transform .3s ease-out;
  }
}

.left,
.right {
  width: $lightbox-bloc-size;
  position: relative;
  z-index: 2;
  height: 100%;
  padding: 1rem;
}

.left {
  padding-right: 3rem;
}

.dialog {
  width: 100%;
  height: 100%;
  flex-shrink: 0;
  position: relative;
  z-index: 2;
  transition: all .3s ease-out;

  &:not(:last-child) {
    margin-right: $lightbox-bloc-size;
  }

  button {
    width: 100%;
    height: 100%;
  }
}

.project-title {
  text-transform: uppercase;
}

.project-description {
  margin-top: 1rem;
}

.image-title {
  font-family: $font-family-italic;
}

.close-button {
  position: absolute;
  top: 0;
  right: 1rem;
}

